--- a/web/act2_2.html
+++ b/web/act2_2.html
@@ -11,6 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <h1>REGISTRATION FORM</h1>
         <form action="LoginServlet">
             First Name:<input type="text" name="nom">
             <br>
