--- a/web/act2_2.html
+++ b/web/act2_2.html
@@ -13,7 +13,7 @@ and open the template in the editor.
     <body>
         <h1>REGISTRATION FORM</h1>
         <form action="LoginServlet">
-            First Name:<input type="text" name="nom">
+            First Name:<input type="text" name="nom" id="nom">
             <br>
             Last Name:<input type="text" name="cognom">
             <br>
