--- a/web/act4_index.html
+++ b/web/act4_index.html
@@ -13,9 +13,9 @@ and open the template in the editor.
     <body>
         <h1>Exercises: Beans</h1>
         <ul>
-            <li ><a href="color_form1.html">ChooseColors1</a></li>
-            <li ><a href="color_form2.html">ChooseColors2</a></li>
-            <li ><a href="color_form3.html">ChooseColors3</a></li>
+            <li ><a href="act4.html">ChooseColors1</a></li>
+            <li ><a href="act4_2.html">ChooseColors2</a></li>
+            <li ><a href="act4_3.html">ChooseColors3</a></li>
         </ul>
     </body>
 </html>
