--- a/web/act4_2.html
+++ b/web/act4_2.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="color2.jsp">
+        <form action="act4_2.jsp">
             <h1>Choose Colors (2)</h1>
             Foreground Color:<input type="text" name="foregroundColor"><br>
             Background Color:<input type="text" name="backgroundColor"><br>
