--- a/web/act4.html
+++ b/web/act4.html
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <form action="act4_1.jsp">
+        <form action="act4">
             <h1>Choose Colors (1)</h1>
             Foreground Color:<input type="text" name="foreground"><br>
             Background Color:<input type="text" name="background"><br>
