--- a/web/act4.html
+++ b/web/act4.html
@@ -13,8 +13,8 @@ and open the template in the editor.
     <body>
         <form action="act4">
             <h1>Choose Colors (1)</h1>
-            Foreground Color:<input type="text" name="foreground"><br>
-            Background Color:<input type="text" name="background"><br>
+            Foreground Color:<input type="text" name="foregroundColor"><br>
+            Background Color:<input type="text" name="backgroundColor"><br>
             <input type="submit" value="Show Colors">
         </form>
     </body>
